v10.3.0/_sources/generated/pcdsdevices.jet.BeckhoffJetManipulator.rst.txt
pcdsdevices.jet.BeckhoffJetManipulator
======================================

.. currentmodule:: pcdsdevices.jet

.. autoclass:: BeckhoffJetManipulator

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - x
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis_Pre140`
          - ``:X``
          - 
          - normal
          - 
    
        * - y
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis_Pre140`
          - ``:Y``
          - 
          - normal
          - 
    
        * - z
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis_Pre140`
          - ``:Z``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    
    